--- a/configs/bitfinex.conf
+++ b/configs/bitfinex.conf
@@ -1,23 +1,17 @@
 
-#deep - is optional [25,100]
-#deep = 25
+tickers = tBTCUSD
 
-#symbols = BTCUSD,LTCUSD
-#all proceed in one thread, better separate instruments by parsers
-symbols = BTCUSD
 trades = 1
-book = 1
-#feed should be unique for each instance of parser
-feed = 
+orders = 1
 
+precision = P0
+frequency = F0
+length = 25
 
-#precision P0, P1, P2, P3
-precision = P1
+ping = 10
 
-#victor params
-push = sight localhost:10000
-#push = sight localhost:10002
-
-sleep_time = 3000
-#curl_log = curl_one.log
+exchange_id = bitfinex
+feed_id = 
+push = localhost:10000
+log_lws = 1
 
