--- a/configs/bitfinex.conf
+++ b/configs/bitfinex.conf
@@ -1,5 +1,5 @@
 
-tickers = tBTCUSD
+tickers = tBTCUSD,tLTCUSD
 
 trades = 1
 orders = 1
@@ -12,6 +12,6 @@ ping = 10
 
 exchange_id = bitfinex
 feed_id = 
-push = localhost:10000
-log_lws = 1
+push = tyra localhost:10000;ying tLTCUSD 100
+log_lws = 0
 
