--- a/configs/huobi.conf
+++ b/configs/huobi.conf
@@ -14,6 +14,7 @@ bbo = 0
 
 exchange_id = huobi
 feed_id = qwer
-push = localhost:10000
+#push = stat opa;ying btcusdt 100
+push = tyra localhost:10000;stat opa
 log_lws = 1
 
