--- a/makoa/CMakeLists.txt
+++ b/makoa/CMakeLists.txt
@@ -1,4 +1,9 @@
 INCLUDE_DIRECTORIES(../)
-ADD_EXECUTABLE(makoa_server makoa.cpp engine.cpp server.cpp securities.cpp config.cpp exports.cpp)
-TARGET_LINK_LIBRARIES(makoa_server evie pthread dl)
+
+ADD_LIBRARY(exports STATIC exports.cpp)
+TARGET_LINK_LIBRARIES(exports tyra dl)
+
+ADD_EXECUTABLE(makoa_server makoa.cpp engine.cpp server.cpp config.cpp)
+TARGET_LINK_LIBRARIES(makoa_server evie exports pthread)
+
 
