--- a/alco/bitfinex/CMakeLists.txt
+++ b/alco/bitfinex/CMakeLists.txt
@@ -6,4 +6,4 @@ INCLUDE_DIRECTORIES(~/develop/libwebsockets/build/include)
 find_library(websockets name websockets PATHS ${LIBWEBSOCKET_PATH})
 
 ADD_EXECUTABLE(bitfinex bitfinex.cpp config.cpp parse.cpp)
-TARGET_LINK_LIBRARIES(bitfinex evie tyra  ${websockets})
+TARGET_LINK_LIBRARIES(bitfinex evie exports  ${websockets})
