--- a/alco/huobi/CMakeLists.txt
+++ b/alco/huobi/CMakeLists.txt
@@ -6,4 +6,4 @@ INCLUDE_DIRECTORIES(~/develop/libwebsockets/build/include)
 find_library(websockets name websockets PATHS ${LIBWEBSOCKET_PATH})
 
 ADD_EXECUTABLE(huobi huobi.cpp config.cpp parse.cpp)
-TARGET_LINK_LIBRARIES(huobi evie tyra ${websockets} z)
+TARGET_LINK_LIBRARIES(huobi evie exports ${websockets} z)
