--- a/configs/makoa_server.conf
+++ b/configs/makoa_server.conf
@@ -1,19 +1,20 @@
 
-log_exporter = 1
 port = 10000
 name = makoa
 
 #export = viktor sight localhost:10010
 
 #BTCUSD
-#export = ying 3842312473 100
-#export = ying BTCUSD 100
+export = ying tBTCUSD 100
 #export = ying RIH0 100
 #export = ying SVH0 100
 #export = ying btcusdt 100
+#export = ying tLTCUSD 100
 
 #export = file csv rename_new logs/data.csv
 #export = file bin rename_new logs/data.bin
 #export = mysql rename_new 192.168.1.4 0 mgame mgame_user mgame_pass
-export = stat
+#export = stat bla1;ying btcusdt 100;stat bla2
+#export = stat
+#export = log_messages
 
