--- a/alco/plaza2/CMakeLists.txt
+++ b/alco/plaza2/CMakeLists.txt
@@ -7,4 +7,4 @@ FIND_LIBRARY(plaza_cgate NAME libcgate.so PATHS ${PLAZA_LIB_PATH})
 FIND_LIBRARY(plaza_sys NAME libP2Sys.so PATHS ${PLAZA_LIB_PATH})
 FIND_LIBRARY(plaza_rep NAME libP2ReplClient.so PATHS ${PLAZA_LIB_PATH})
 
-TARGET_LINK_LIBRARIES(plaza evie tyra ${plaza_cgate} ${plaza_sys} ${plaza_rep})
+TARGET_LINK_LIBRARIES(plaza exports ${plaza_cgate} ${plaza_sys} ${plaza_rep})
