--- a/makoa/CMakeLists.txt
+++ b/makoa/CMakeLists.txt
@@ -1,9 +1,9 @@
 INCLUDE_DIRECTORIES(../)
 
 ADD_LIBRARY(exports STATIC exports.cpp)
-TARGET_LINK_LIBRARIES(exports tyra dl)
+TARGET_LINK_LIBRARIES(exports evie tyra dl)
 
 ADD_EXECUTABLE(makoa_server makoa.cpp engine.cpp server.cpp config.cpp)
-TARGET_LINK_LIBRARIES(makoa_server evie exports pthread)
+TARGET_LINK_LIBRARIES(makoa_server exports pthread)
 
 
