--- a/configs/plaza.conf
+++ b/configs/plaza.conf
@@ -4,9 +4,9 @@ key = secretkey
 #local_pass = ai
 
 isin_filter = *
-log_plaza = 1
+log_plaza = 0
 
-exchange_id = forts_test
+exchange_id = forts_te
 feed_id = 
-push = sight localhost:10000
+push = stat;ying RIH0 100
 
