--- a/configs/makoa_server.conf
+++ b/configs/makoa_server.conf
@@ -1,11 +1,15 @@
 
-port = 10000
 name = makoa
 
-#export = viktor sight localhost:10010
+export_threads = 2
+pooling = 0
+
+#import = tyra 10000
+#import = pipe /dev/shm/huobi_pp
+import = mmap_cp /dev/shm/huobi_cp
 
 #BTCUSD
-export = ying tBTCUSD 100
+#export = ying tBTCUSD 100
 #export = ying RIH0 100
 #export = ying SVH0 100
 #export = ying btcusdt 100
@@ -14,7 +18,17 @@ export = ying tBTCUSD 100
 #export = file csv rename_new logs/data.csv
 #export = file bin rename_new logs/data.bin
 #export = mysql rename_new 192.168.1.4 0 mgame mgame_user mgame_pass
-#export = stat bla1;ying btcusdt 100;stat bla2
-#export = stat
+export = stat bla1;ying btcusdt 100;stat bla2
+#export = stat i;log_messages;stat o
 #export = log_messages
+#export = stat bla
+#export = stat bla2
+#export = stat bla3
+#export = stat bla4
+#export = stat bla5
+#export = stat bla6
+#export = stat bla7
+#export = stat bla8
+#export = stat bla9
+#export = stat bla10
 
