--- a/configs/huobi.conf
+++ b/configs/huobi.conf
@@ -8,13 +8,17 @@ orders = 1
 levels = 150
 
 snapshot = 0
-step = step2
+step = step0
 
 bbo = 0
 
 exchange_id = huobi
 feed_id = qwer
 #push = stat opa;ying btcusdt 100
-push = tyra localhost:10000;stat opa
-log_lws = 1
+#push = stat opa;tyra localhost:10000;stat opa2
+#push = ying btcusdt 100
+#push = tyra localhost:10000
+#push = pipe /dev/shm/huobi_pp
+push = mmap_cp /dev/shm/huobi_cp
+log_lws = 0
 
