--- a/alco/CMakeLists.txt
+++ b/alco/CMakeLists.txt
@@ -8,5 +8,5 @@ find_library(websockets name websockets PATHS ${LIBWEBSOCKET_PATH})
 ADD_LIBRARY(lws STATIC lws.cpp)
 TARGET_LINK_LIBRARIES(lws evie ${websockets})
 
-SUBDIRS(bitfinex plaza2 huobi)
+SUBDIRS(bitfinex plaza2 huobi binance)
 
