--- a/viktor/CMakeLists.txt
+++ b/viktor/CMakeLists.txt
@@ -10,6 +10,6 @@ TARGET_LINK_LIBRARIES(file evie)
 TARGET_LINK_LIBRARIES(stat evie)
 TARGET_LINK_LIBRARIES(mysql evie mysqlclient)
 
-ADD_EXECUTABLE(pip pip.cpp)
+ADD_EXECUTABLE(pip pip.cpp ifile.cpp ../makoa/imports.cpp)
 TARGET_LINK_LIBRARIES(pip exports)
 
