--- a/configs/pip.conf
+++ b/configs/pip.conf
@@ -1,14 +1,16 @@
 
 #push = log_messages
-#push = stat;ying btcusdt 100
-#push = stat;ying BTC-USD 100
-#push = stat;ying XBTUSD
+#push = stat;ying $0
+#push = stat
 #push = tyra localhost:10000
 #push = mmap_cp /dev/shm/pip_cp
 #push = pipe /dev/shm/pip_pp
 #push = stat brief
-push = ying btcusdt;stat brief
 
 #import = file /data/e/binance/data.bin 2020-07-09T00:00:00
-import = file /data/e/huobi/data.bin 2020-07-09T00:00:00
+#import = file /data/e/huobi/data.bin 2020-07-09T00:00:00
+#import = file history /home/snike/quik_bot/build/test/huobi/data.bin_1597940257 2020-08-20T00:00:00
+import = file history /data/e/bitfinex/data.bin 2020-09-29T07:00:15 2020-09-29T15:00:00
+#import = file /data/e/bitfinex/data.bin
+push = file csv truncate data.csv
 
