--- a/configs/bitfinex.conf
+++ b/configs/bitfinex.conf
@@ -1,10 +1,10 @@
 
-tickers = tBTCUSD,tLTCUSD
+tickers = tBTCUSD,tETHUSD
 
 trades = 1
 orders = 1
 
-precision = P0
+precision = R0
 frequency = F0
 length = 25
 
@@ -12,6 +12,6 @@ ping = 10
 
 exchange_id = bitfinex
 feed_id = 
-push = tyra localhost:10000;ying tLTCUSD 100
+push = stat
 log_lws = 0
 
