--- a/configs/huobi.conf
+++ b/configs/huobi.conf
@@ -1,5 +1,5 @@
 
-#tickers = btcusdt,etcusdt
+#tickers = btcusdt,ethusdt
 tickers = btcusdt
 
 trades = 1
@@ -13,7 +13,7 @@ step = step0
 bbo = 0
 
 exchange_id = huobi
-feed_id = qwer
+feed_id =
 #push = stat opa;ying btcusdt 100
 #push = stat opa;tyra localhost:10000;stat opa2
 #push = ying btcusdt 100
