--- a/configs/kraken.conf
+++ b/configs/kraken.conf
@@ -1,5 +1,5 @@
 
-tickers = BTC/USD,ETH/USD
+tickers = XBT/USD,ETH/USD
 
 trades = 1
 orders = 1
@@ -9,7 +9,7 @@ bba = 0
 exchange_id = kraken
 feed_id = 
 #push = log_messages
-push = ying XBT/USD
-#push = stat
+#push = ying XBT/USD
+push = stat
 log_lws = 0
 
