--- a/configs/coinbase.conf
+++ b/configs/coinbase.conf
@@ -7,7 +7,6 @@ orders = 1
 exchange_id = coinbase
 feed_id = 
 #push = log_messages
-push = ying ETH-USD 100
-#push = stat
+push = stat
 log_lws = 0
 
