plaza version update

--- a/alco/plaza2/scheme/orders.ini
+++ b/alco/plaza2/scheme/orders.ini
@@ -11,6 +11,7 @@ field=volume,i8
 field=moment,t
 field=moment_ns,u8
 field=dir,i1
+field=synth_volume,i8
 
 index=IDX_orders_aggr_ID_U,UNIQUE,replID
 index=IDX_orders_aggr_REV_U,UNIQUE,replRev
