--- a/alco/plaza2/scheme/trades.ini
+++ b/alco/plaza2/scheme/trades.ini
@@ -11,12 +11,14 @@ field=isin_id,i4
 field=id_deal,i8
 field=xpos,i8
 field=xamount,i8
-field=id_ord_buy,i8
-field=id_ord_sell,i8
+field=public_order_id_buy,i8
+field=public_order_id_sell,i8
 field=price,d16.5
 field=moment,t
 field=moment_ns,u8
 field=nosystem,i1
+field=xstatus_buy,i8
+field=xstatus_sell,i8
 
 index=IDX_deal_ID_U,UNIQUE,replID
 index=IDX_deal_REV_U,UNIQUE,replRev
