--- a/evie/CMakeLists.txt
+++ b/evie/CMakeLists.txt
@@ -1,3 +1,3 @@
 PROJECT(evie)
-ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp)
+ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp utils.cpp)
 TARGET_LINK_LIBRARIES(evie pthread)
