--- a/evie/CMakeLists.txt
+++ b/evie/CMakeLists.txt
@@ -1,3 +1,4 @@
 PROJECT(evie)
-ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp utils.cpp)
+ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp utils.cpp socket.cpp)
 TARGET_LINK_LIBRARIES(evie pthread)
+
