--- a/tests/zero/alco_zero.conf
+++ b/tests/zero/alco_zero.conf
@@ -1,24 +1,16 @@
+tickers = tBTCUSD
 
-#deep - is optional [25,100]
-#deep = 25
-
-#symbols = BTCUSD,LTCUSD
-#all proceed in one thread, better separate instruments by parsers
-symbols = BTCUSD
 trades = 1
-book = 1
-#feed should be unique for each instance of parser
-feed = 
+orders = 1
 
+precision = R0
+frequency = F0
+length = 100
 
-#precision P0, P1, P2, P3
-precision = P1
+ping = 10
 
-#curl_log = curl_zero.log
-
-#victor params
-push = sight localhost:20000 
-
-sleep_time = 3000
-curl_log = curl_zero.log
+exchange_id = bitfinex
+feed_id =
+log_lws = 0
+push = tyra localhost:20000
 
