statistics satellite module added, sample output
exchange: bitfinex, feed: , security: tETHUSD, security_id: 2388457587
  min_trade: 1921.80000 max_trade: 2065.10000 min_bid: 1915.98222 max_bid: 2064.40000 min_ask: 1922.20000 max_ask: 2075.00000
  trades: 33026(min price step 0.00001) bids: 3997530(min price step 0.00001) asks: 3052745(min price step 0.00001)
 min_trade_count: 0.00000001 10%_trades_count: 0.00096000 50%_trades_count: 0.11667646 90%_trades_count: 2.03351033 max_trade_count: 94.77665500
  spreads: 11338240 min_spread: -0.68798 1%_spreads: 0.00254 10%_spreads: 0.03033 50%_spreads: 0.10051 90%_spreads: 0.68222 99%_spreads: 1.20000 max_spread: 4.75372
exchange: bitfinex, feed: , security: tBTCUSD, security_id: 3490609519
  min_trade: 28702.00000 max_trade: 30769.00000 min_bid: 28651.00000 max_bid: 30768.00000 min_ask: 28703.00000 max_ask: 30852.00000
  trades: 61031(min price step 0.00004) bids: 2949795(min price step 0.00001) asks: 2760633(min price step 0.00001)
 min_trade_count: 0.00000001 10%_trades_count: 0.00020000 50%_trades_count: 0.00500000 90%_trades_count: 0.19320251 max_trade_count: 24.00000000
  spreads: 9516717 min_spread: -8.00000 1%_spreads: 0.01452 10%_spreads: 0.18199 50%_spreads: 1.00000 90%_spreads: 5.00000 99%_spreads: 12.00000 max_spread: 132.19549

--- a/viktor/CMakeLists.txt
+++ b/viktor/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_LIBRARY(viktor SHARED viktor.cpp)
 ADD_LIBRARY(mysql SHARED mysql.cpp)
 ADD_LIBRARY(file SHARED efile.cpp)
 ADD_LIBRARY(stat SHARED estat.cpp)
+ADD_LIBRARY(stat_ticker SHARED stat_ticker.cpp)
 
 TARGET_LINK_LIBRARIES(viktor tyra evie)
 TARGET_LINK_LIBRARIES(file evie)
