realtime replayer in file import added

--- a/configs/binance.conf
+++ b/configs/binance.conf
@@ -6,6 +6,7 @@ bba = 1
 
 exchange_id = binance
 feed_id = 
-push = stat
+#push = log_messages;ying ETHUSDT
+push = stat;file bin rename_new ../data/binance/data.bin
 log_lws = 0
 
