--- a/configs/bitfinex.conf
+++ b/configs/bitfinex.conf
@@ -12,6 +12,8 @@ ping = 10
 
 exchange_id = bitfinex
 feed_id = 
-push = stat
+#push = tyra localhost:10010
+#push = stat;ying $0
+push = stat;file bin rename_new ../data/bitfinex/data.bin
 log_lws = 0
 
