--- a/configs/bitmex.conf
+++ b/configs/bitmex.conf
@@ -9,8 +9,7 @@ orders_table = orderBookL2_25
 
 exchange_id = bitmex
 feed_id = 
-#push = log_messages
-#push = ying XBTUSD
-push = stat
+#push = stat;ying XBTUSD
+push = file bin rename_new ../data/bitmex/data.bin
 log_lws = 0
 
