--- a/configs/coinbase.conf
+++ b/configs/coinbase.conf
@@ -7,6 +7,7 @@ orders = 1
 exchange_id = coinbase
 feed_id = 
 #push = log_messages
-push = stat
+#push = stat;ying BTC-USD
+push = file bin rename_new ../data/coinbase/data.bin
 log_lws = 0
 
