--- a/configs/crypto.com.conf
+++ b/configs/crypto.com.conf
@@ -1,4 +1,5 @@
-tickers = BTC_USDT
+tickers = BTC_USDT,ETH_BTC
+#tickers = BTC_USDT
 
 trades = 1
 orders = 1
@@ -7,7 +8,7 @@ depth = 10
 exchange_id = crypcom
 feed_id = 
 #push = log_messages
-#push = /dev/null
-push = ying $0
+#push = stat;ying $0
+push = file bin rename_new ../data/crypto.com/data.bin
 log_lws = 0
 
