--- a/configs/huobi.conf
+++ b/configs/huobi.conf
@@ -1,6 +1,6 @@
 
-#tickers = btcusdt,ethusdt
-tickers = btcusdt
+tickers = btcusdt,ethusdt
+#tickers = btcusdt
 
 trades = 1
 
@@ -8,17 +8,14 @@ orders = 1
 levels = 150
 
 snapshot = 0
-step = step0
+step = step2
 
 bbo = 0
 
 exchange_id = huobi
-feed_id =
-#push = stat opa;ying btcusdt 100
-#push = stat opa;tyra localhost:10000;stat opa2
-#push = ying btcusdt 100
-#push = tyra localhost:10000
-#push = pipe /dev/shm/huobi_pp
-push = mmap_cp /dev/shm/huobi_cp
+feed_id = c
+#push = tyra localhost:10020
+#push = stat;ying $0
+push = file bin rename_new ../data/huobi/data.bin
 log_lws = 0
 
