--- a/configs/kraken.conf
+++ b/configs/kraken.conf
@@ -9,7 +9,7 @@ bba = 0
 exchange_id = kraken
 feed_id = 
 #push = log_messages
-#push = ying XBT/USD
-push = stat
+#push = stat;ying XBT/USD
+push = file bin rename_new ../data/kraken/data.bin
 log_lws = 0
 
