--- a/configs/pip.conf
+++ b/configs/pip.conf
@@ -1,17 +1,18 @@
 
 #push = log_messages
-#push = stat;ying $0
+push = stat;ying $0
 #push = stat
+#push = stat brief
+#push = stat_ticker
 #push = tyra localhost:10000
 #push = mmap_cp /dev/shm/pip_cp
 #push = pipe /dev/shm/pip_pp
-#push = stat brief
 #push = file csv truncate data.csv
-push = stat_ticker
 
 #import = file /data/e/binance/data.bin 2020-07-09T00:00:00
 #import = file /data/e/huobi/data.bin 2020-07-09T00:00:00
-import = file history /data/glasses/crypto/bitfinex/data.bin 2022-05-20T00:00:00 2022-05-20T23:59:59
+#import = file history /data/glasses/crypto/bitfinex/data.bin 2022-05-20T00:00:00 2022-05-20T23:59:59
 #import = file history /data/glasses/crypto/bitmex/data.bin 2022-05-20T00:00:00 2022-05-20T23:59:59
 #import = file /data/e/bitfinex/data.bin
+import = file replay 10.0 /data/e/bitfinex/data.bin
 
