gzip in gzip out

--- a/makoa/CMakeLists.txt
+++ b/makoa/CMakeLists.txt
@@ -4,7 +4,7 @@ ADD_LIBRARY(exports STATIC exports.cpp mmap.cpp)
 TARGET_LINK_LIBRARIES(exports evie tyra dl)
 
 ADD_LIBRARY(imports STATIC imports.cpp ../viktor/ifile.cpp)
-TARGET_LINK_LIBRARIES(imports evie)
+TARGET_LINK_LIBRARIES(imports evie z)
 
 ADD_LIBRARY(makoa SHARED engine.cpp server.cpp)
 TARGET_LINK_LIBRARIES(makoa exports imports pthread)
