--- a/alco/CMakeLists.txt
+++ b/alco/CMakeLists.txt
@@ -8,5 +8,9 @@ find_library(websockets name websockets PATHS ${LIBWEBSOCKET_PATH})
 ADD_LIBRARY(lws STATIC lws.cpp alco.cpp)
 TARGET_LINK_LIBRARIES(lws evie ${websockets})
 
-SUBDIRS(bitfinex plaza2 huobi binance coinbase kraken bitmex crypto.com)
+SUBDIRS(bitfinex huobi binance coinbase kraken bitmex crypto.com)
+
+IF("${MAKE_PLAZA}")
+    SUBDIRS(plaza2)
+ENDIF("${MAKE_PLAZA}")
 
