--- a/viktor/CMakeLists.txt
+++ b/viktor/CMakeLists.txt
@@ -8,9 +8,9 @@ ADD_LIBRARY(stat_ticker SHARED stat_ticker.cpp)
 
 TARGET_LINK_LIBRARIES(viktor exports)
 TARGET_LINK_LIBRARIES(mysql evie mysqlclient)
-TARGET_LINK_LIBRARIES(file evie)
-TARGET_LINK_LIBRARIES(stat evie)
-TARGET_LINK_LIBRARIES(stat_ticker evie)
+TARGET_LINK_LIBRARIES(file exports)
+TARGET_LINK_LIBRARIES(stat exports)
+TARGET_LINK_LIBRARIES(stat_ticker exports)
 
 ADD_EXECUTABLE(pip pip.cpp)
 TARGET_LINK_LIBRARIES(pip makoa)
