--- a/ying/CMakeLists.txt
+++ b/ying/CMakeLists.txt
@@ -1,5 +1,5 @@
 INCLUDE_DIRECTORIES(../)
 PROJECT(ying)
 ADD_LIBRARY(ying SHARED ying.cpp mirror.cpp)
-TARGET_LINK_LIBRARIES(ying evie ncurses)
+TARGET_LINK_LIBRARIES(ying exports ncurses)
 
