--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,7 @@ ELSE("${IS_CLANG}")
 
 ENDIF("${IS_CLANG}")
 
-IF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-ENDIF("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 SUBDIRS(evie makoa ying tyra viktor alco)
 
