--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,20 +18,17 @@ IF("${IS_CLANG}")
 
     set(CMAKE_C_COMPILER "/usr/bin/clang" CACHE STRING "clang compiler" FORCE)
     set(CMAKE_CXX_COMPILER "/usr/bin/clang++" CACHE STRING "clang compiler" FORCE)
-
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++2b")
     message("clang mode")
 
 ELSE("${IS_CLANG}")
 
     set(CMAKE_C_COMPILER "/usr/bin/gcc" CACHE STRING "gcc compiler" FORCE)
     set(CMAKE_CXX_COMPILER "/usr/bin/g++" CACHE STRING "gcc compiler" FORCE)
-
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -march=native -std=c++2b")
     message("gcc mode")
 
 ENDIF("${IS_CLANG}")
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -march=native -std=c++20")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 SUBDIRS(evie makoa ying tyra viktor alco)
