--- a/alco/CMakeLists.txt
+++ b/alco/CMakeLists.txt
@@ -6,7 +6,7 @@ find_library(websockets name websockets PATHS ${LIBWEBSOCKET_PATH})
 ADD_LIBRARY(lws STATIC lws.cpp alco.cpp)
 TARGET_LINK_LIBRARIES(lws evie ${websockets})
 
-SUBDIRS(bitfinex huobi binance coinbase kraken bitmex crypto.com)
+SUBDIRS(bitfinex huobi binance coinbase kraken bitmex crypto.com bybit)
 
 IF("${MAKE_PLAZA}")
     SUBDIRS(plaza2)
