--- a/configs/pip.conf
+++ b/configs/pip.conf
@@ -14,5 +14,5 @@ push = stat;ying $0
 #import = file history /data/glasses/crypto/bitfinex/data.bin 2022-05-20T00:00:00 2022-05-20T23:59:59
 #import = file history /data/glasses/crypto/bitmex/data.bin 2022-05-20T00:00:00 2022-05-20T23:59:59
 #import = file /data/e/bitfinex/data.bin
-import = file replay 10.0 /data/e/bitfinex/data.bin
+import = files_replay 10.0 /data/e/bitfinex/data.bin
 
