--- a/evie/CMakeLists.txt
+++ b/evie/CMakeLists.txt
@@ -1,4 +1,4 @@
 PROJECT(evie)
-ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp utils.cpp socket.cpp thread.cpp config.cpp profiler.cpp mstring.cpp)
+ADD_LIBRARY(evie STATIC mlog.cpp mfile.cpp myitoa.cpp utils.cpp socket.cpp thread.cpp config.cpp profiler.cpp mstring.cpp decimal.cpp)
 TARGET_LINK_LIBRARIES(evie pthread)
 
