--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 project(mgame)
 
 set(MAKE_PLAZA OFF CACHE BOOL "plaza")
+set(MAKE_SQL OFF CACHE BOOL "sql")
 
 IF(NOT IS_CLANG)
     set(IS_CLANG OFF CACHE BOOL "clang" FORCE)
