--- a/viktor/CMakeLists.txt
+++ b/viktor/CMakeLists.txt
@@ -1,12 +1,15 @@
 PROJECT(viktor)
 ADD_LIBRARY(viktor SHARED viktor.cpp)
-ADD_LIBRARY(mysql SHARED mysql.cpp)
 ADD_LIBRARY(file SHARED efile.cpp)
 ADD_LIBRARY(stat SHARED estat.cpp)
 ADD_LIBRARY(stat_ticker SHARED stat_ticker.cpp)
 
+IF("${MAKE_SQL}")
+    ADD_LIBRARY(mysql SHARED mysql.cpp)
+    TARGET_LINK_LIBRARIES(mysql evie mysqlclient)
+ENDIF("${MAKE_SQL}")
+
 TARGET_LINK_LIBRARIES(viktor exports)
-TARGET_LINK_LIBRARIES(mysql evie mysqlclient)
 TARGET_LINK_LIBRARIES(file exports)
 TARGET_LINK_LIBRARIES(stat exports)
 TARGET_LINK_LIBRARIES(stat_ticker exports)
